# flexblock

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build.rs  create_installer  targets
assets/config/: controls.toml
assets/graphics/ply/test/: minimal.ply  (+2 more)
assets/graphics/shaders/: artsyfartsy.comp  gui.frag  gui.vert  s2.frag  s2.vert
assets/graphics/textures/: compute_textures.json  font_info.csv  font_processor.py
crates/audio/: Cargo.toml
crates/audio/src/: audio_handle.rs  audio_manager.rs  audio_setup.rs  lib.rs  listener.rs  sound.rs  synth_sound.rs
crates/flexblock-app/: Cargo.toml
crates/flexblock-app/src/: channels.rs  cli.rs  logging.rs  main.rs  packing.rs  window.rs
crates/flexblock-app/src/audio/: audio_handle.rs  audio_manager.rs  listener.rs  synth.rs
crates/flexblock-app/src/game/: controls.rs  graphics_state_model.rs  logic.rs  mod.rs  player.rs  state.rs
crates/flexblock-app/src/game/physics/: physics_body.rs
crates/flexblock-app/src/game/view/: view.rs
crates/flexblock-app/src/game/world/: raytrace.rs
crates/flexblock-app/src/game/world/generation/: mod.rs
crates/flexblock-app/src/graphics/: capabilities.rs  mod.rs  packing.rs  window.rs
crates/flexblock-app/src/graphics/pack/: render_message_validator.rs  render_state.rs
crates/flexblock-app/src/graphics/render_messages/: mod.rs  vertex_pack.rs
crates/flexblock-app/src/graphics/wrapper/: buffer.rs  gui.rs  loader.rs  render_caller.rs  shader.rs  texture.rs  window.rs
crates/flexblock-app/src/logic/: client.rs  controls.rs  external_event_handler.rs  latency_state.rs  logic.rs  logic_event.rs  mod.rs  run.rs  sacred_state.rs  server.rs
crates/flexblock-app/src/pack/: mod.rs  packing.rs  render_message_validator.rs  render_state.rs
crates/flexblock-app/src/utils/: colors.rs  file_utilities.rs  ply.rs  png_reader.rs
crates/flexblock-app/src/utils/maths/: mod.rs
crates/game/: Cargo.toml
crates/game/src/: graphics_state_model.rs  lib.rs  player.rs  state.rs  state_input_event.rs
crates/game/src/physics/: aabb.rs  physics_body.rs
crates/game/src/view/: mod.rs  principal_axes.rs  view.rs  view_direction.rs
crates/graphics/: Cargo.toml
crates/graphics/macros/: Cargo.toml
crates/graphics/macros/src/: lib.rs
crates/graphics/macros/src/expansion/: mod.rs  shader.rs
crates/graphics/src/: capabilities.rs  external_event.rs  lib.rs
crates/graphics/src/model/: mod.rs  model.rs  model_manager.rs
crates/graphics/src/pack/: compute_pipeline.rs  cube_faces.rs  mod.rs
crates/graphics/src/render_messages/: mod.rs  uniform_data.rs  vertex_pack.rs
crates/graphics/src/wrapper/: buffer.rs  framebuffer.rs  gui.rs  loader.rs  mod.rs  render_caller.rs  shader.rs  texture.rs  vertex_array.rs  vertex_buffer_metadata.rs
crates/legion-test/: Cargo.toml
crates/legion-test/src/: main.rs
crates/multiplayer/: Cargo.toml
crates/multiplayer/src/: client.rs  client_handle.rs  latency_state.rs  lib.rs  packet.rs  sacred_state.rs  server.rs  server_handle.rs  server_networking.rs
crates/multiplayer/tests/: integration_test.rs
crates/sound-engine/: Cargo.toml
crates/synth/: Cargo.toml
crates/synth/src/: lib.rs  sample_provider.rs
crates/synth/synth-derive/: Cargo.toml
crates/synth/synth-derive/assets/tests/: one_pole_filter_module_output.rs
crates/utils/: Cargo.toml
crates/utils/src/: csv_reader.rs  file_utilities.rs  lib.rs  maths.rs  mesh_iterator.rs  ply.rs  png_reader.rs  tick.rs  vertex.rs
crates/world/: Cargo.toml
crates/world-generation/: Cargo.toml
crates/world-generation/src/: lib.rs  photogrammetry_to_voxels.rs
crates/world/src/: chunk.rs  lib.rs  location.rs  raytrace.rs  terrain.rs  voxel.rs
flexblock-db/: Cargo.toml
flexblock-synth/: Cargo.toml
flexblock-synth/flexblock-synth-derive/: Cargo.toml
flexblock-synth/flexblock-synth-derive/assets/tests/: no_module_generics_output.rs
flexblock-synth/flexblock-synth-derive/src/: lib.rs
flexblock-synth/src/: audio.rs  lib.rs  sample_provider.rs  synth.rs
flexblock-synth/src/midi/: frequency_player.rs  midi_handler.rs  midi_sequence.rs  mod.rs
flexblock-synth/src/modules/: delay.rs  envelope.rs  mod.rs  sampler.rs  splitter.rs
flexblock-synth/src/modules/combinators/: add.rs  multiply.rs  subtract.rs
flexblock-synth/src/modules/effects/: convolution_filter.rs
flexblock-synth/src/modules/oscillators/: saw_oscillator.rs  sine_oscillator.rs
graphics/framebuffers/: framebuffers.json
graphics/ply/test/: infinite_header.ply  size_mismatch_too_long.ply  too_many_types.ply
graphics/shaders/: artsyfartsy.comp  s1.vert  simple.frag  simple.vert  sobel.comp  transfer.comp
graphics/textures/: compute_textures.json  framebuffer_textures.json
macros/src/: lib.rs
macros/src/expansion/: mod.rs  shader.rs
shaders/: s1.frag  s1.fragmentshader  s1.vert  s1.vertexshader  s2.vert
src/: channels.rs  logging.rs  main.rs
src/audio/: audio_manager.rs  audio_player_state.rs  audio_setup.rs  listener.rs  mod.rs  sound.rs  synth.rs
src/game/: controls.rs  external_event_handler.rs  game.rs  graphics_state_model.rs  input_event.rs  logic.rs  mod.rs  player.rs  state.rs  state_input_event.rs  view.rs
src/game/physics/: aabb.rs  mod.rs  physics_body.rs  rigidbody.rs
src/game/view/: mod.rs  principal_axes.rs
src/game/world/: chunk.rs  mod.rs  raytrace.rs  terrain.rs  voxel.rs
src/graphics/: bindings.rs  capabilities.rs  external_event.rs  mod.rs  packing.rs  render_messages.rs  render_pack.rs  window.rs
src/graphics/pack/: compute_pipeline.rs  cube_faces.rs  mod.rs  render_message_validator.rs  render_state.rs
src/graphics/render_messages/: mod.rs  render_messages.rs  vertex_pack.rs
src/graphics/wrapper/: buffer.rs  frame_buffer.rs  framebuffer.rs  gui.rs  loader.rs  mod.rs  render_caller.rs  shader.rs  texture.rs  vertex_array.rs  window.rs
src/utils/: colors.rs  csv_reader.rs  file_utilities.rs  mesh_iterator.rs  mod.rs  ply.rs  png_reader.rs  vertex.rs
src/utils/maths/: mod.rs  ray.rs
src/world/: chunk.rs  mod.rs  terrain.rs  voxel.rs
wix/: main.wxs
(+24 files in other folders)
