[package]
name = "flexblock"
version = "0.1.0"
authors = ["Albert Garde"]
edition = "2018"
include = ["src/**/*", "Cargo.toml", "assets/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
macros = { path = "macros"}
flexblock-synth = { path = "flexblock-synth"}
hashbrown = { version = "0.9.1", features = ["serde"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.59"
bincode = "1.3.2"
typetag = "0.1.7"

bytepack = "0.4.1"
bytepack_derive = "0.2.0"
glutin = "0.26.0"
gl = "0.10.0"
raw-window-handle = "0.3.3"
regex = "1.4.3"
nalgebra-glm = { version = "0.11.0", features = ["serde-serialize"] }
png = "0.16.8"
strum = { version = "0.20", features = ["derive"] }
byteorder = "*"