[package]
name = "flexblock"
version = "0.1.0"
authors = ["Albert Garde"]
edition = "2018"
include = ["src/**/*", "Cargo.toml", "assets/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
macros = { path = "macros"}
flexblock-synth = { path = "flexblock-synth"}
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
bincode = "1.3.*"
typetag = "0.1.*"
lazy_static = "1.4.*"
cpal = "0.13.*"
rand = "0.8.*"
rand_chacha = "0.3.*"
dyn-clone = "1.0.*"
konst = "0.2.*"

bytepack = "0.4.*"
bytepack_derive = "0.2.*"
glutin = "0.26.*"
gl = "0.10.*"
raw-window-handle = "0.3.*"
regex = "1.4.*"
nalgebra-glm = { version = "0.11.*", features = ["serde-serialize"] }
png = "0.16.*"
strum = { version = "0.20", features = ["derive"] }
byteorder = "*"

log = "0.4.*"
simplelog = "0.10.*"
