[package]
name = "flexblock-synth"
version = "0.1.0"
authors = ["Albert Garde"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexblock-synth-derive = { path = "flexblock-synth-derive" }
cpal = "0.13.1"
text_io = "0.1.8"
rand = { version = "0.8.3", features = ["small_rng"] }
rand_distr = "0.4.0"
hound = "3.4.0"
midi = "0.1.0"
array-init = "2.0.0"
