[package]
name = "audio"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
world = {path = "../world"}
synth = {path = "../synth"}

nalgebra-glm = { version = "0.11.*", features = ["serde-serialize"] }
log = "0.4.*"
cpal = "0.13.3"
rand = "0.8.*"
rand_chacha = "0.3.*"
