
[package]
name = "flexblock"
version = "0.1.0"
authors = ["Albert Garde"]
edition = "2021"
include = ["src/**/*", "Cargo.toml", "../../assets/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
utils = { path = "../utils"}
world = { path = "../world"}
synth = { path = "../synth"}
audio = { path = "../audio"}
game = { path = "../game" }
multiplayer = { path = "../multiplayer" }
graphics = { path = "../graphics" }

clap = { version = "3.0.0-rc.7", features = ["derive"] }
serde = { version = "1.0.*", features = ["derive"] }
bincode = "1.3.*"
typetag = "0.1.*"
cpal = "0.13.3"
rand = "0.8.*"
rand_chacha = "0.3.*"
dyn-clone = "1.0.*"
enum-map = "1.1.*"
toml = "0.5.*"
konst = "0.2.*"

glutin = { version = "0.26.*", features = ["serde"] }
bytepack = "0.4.*"
bytepack_derive = "0.2.*"
png = "0.16.*"
strum = { version = "0.20", features = ["derive"] }
byteorder = "*"
nalgebra-glm = { version = "0.11.*", features = ["serde-serialize"] }

log = "0.4.*"
simplelog = "0.10.*"

[build-dependencies]
serde = { version = "1.0.*", features = ["derive"] }
toml = "0.5.*"
