[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "macros"}
utils = { path = "../utils"}

glutin = { version = "0.26.*", features = ["serde"] }
gl = "0.10.*"
raw-window-handle = "0.3.*"
nalgebra-glm = { version = "0.11.*", features = ["serde-serialize"] }
log = "0.4.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
strum = { version = "0.20", features = ["derive"] }
regex = "1.4.*"
itertools = "0.10.1"
thiserror = "1.0.38"