[package]
name = "world"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }

serde = { version = "1.0.*", features = ["derive"] }
nalgebra-glm = { version = "0.11.*", features = ["serde-serialize"] }
konst = "0.2.*"
bincode = "1.3.*"
typetag = "0.1.*"
