[package]
name = "synth-derive"
version = "0.1.0"
authors = ["Albert Garde <albertsgarde@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.26"
syn = "1.0.72"
quote = "1.0.9"
